# aws-samples

./: README.md
apigateway/rest-api/lambda/: README.md  cdk.json  package-lock.json  package.json
appsync/graphql-api/: README.md  cdk.json  package-lock.json  package.json
athena/: README.md  cdk.json  package-lock.json  package.json
athena/lib/: athena-stack.ts
athena/test/: athena.test.ts
cloudformation/deploy-timer/: README.md
cloudfront/distribution/: README.md  cdk.json  package-lock.json  package.json
cloudfront/lambda-at-edge/: README.md  cdk.json  package-lock.json  package.json
codebuild/from-codecommit-to-s3/: README.md  cdk.json  package-lock.json  package.json
directory-service/self-managed-ad-on-ec2/: README.md  cdk.json  package-lock.json  package.json
docdb/cluster/: README.md  cdk.json  package-lock.json  package.json
iam/permission-boundary/: cdk.json  package-lock.json  package.json
lambda/hello-nodejs/: README.md  cdk.json  package-lock.json  package.json
lambda/hello-python/: README.md  cdk.json  package-lock.json  package.json
lambda/python-poetry/: .gitignore  README.md  cdk.json  package-lock.json  package.json
lambda/python-poetry/functions/root/: pyproject.toml
lambda/python-poetry/functions/root/root/: index.py
sagemaker/byoc-inference/: README.md  cdk.json  package-lock.json  package.json
sagemaker/domain/: README.md  cdk.json  package-lock.json  package.json
sagemaker/notebook-instance/: README.md  cdk.json  package-lock.json  package.json
vpc/ipv4-vpc/: README.md  cdk.json  package-lock.json  package.json
(+102 files in other folders)
