[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Yohei Tsuji <t.t.t.yohei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
